--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <ul>
         <li><a href="./tasks/task-01.html">Task 01</a></li>
+        <li><a href="./tasks/task-02.html">Task 02</a></li>
     </ul>
 </body>
 </html>
