--- a/tasks/task-01.html
+++ b/tasks/task-01.html
@@ -3,7 +3,7 @@
 </h2>
 
 <p>
-    Является ли слово палиндромом?
+    Потрібно створити функцію для вирішення, чи є слово паліндромом
 </p>
 
 <script type="module" src="../js/task-01.js"></script>
