--- a/tasks/task-02.html
+++ b/tasks/task-02.html
@@ -6,4 +6,12 @@
     Потрібно створити функцію, яка буде приймати речення та повертати перше найкоротше слово
 </p>
 
+<p>
+    console.log(findShortWord('The smaller word in sentence')); // in 
+</br>
+    console.log(findShortWord('Whatever you are be a good one')); // a
+</br>
+    console.log(findShortWord('I am proud of myself')); // I
+</p>
+
 <script type="module" src="../js/task-02.js"></script>
