--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./tasks/task-01.html">Task 01</a></li>
         <li><a href="./tasks/task-02.html">Task 02</a></li>
+        <li><a href="./tasks/task-03.html">Task 03</a></li>
     </ul>
 </body>
 </html>
