--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="./tasks/task-01.html">Task 01</a></li>
         <li><a href="./tasks/task-02.html">Task 02</a></li>
         <li><a href="./tasks/task-03.html">Task 03</a></li>
+        <li><a href="./tasks/task-04.html">Task 04</a></li>
     </ul>
 </body>
 </html>
