--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="./tasks/task-03.html">Task 03</a></li>
         <li><a href="./tasks/task-04.html">Task 04</a></li>
         <li><a href="./tasks/task-05.html">Task 05</a></li>
+        <li><a href="./tasks/task-06.html">Task 06</a></li>
     </ul>
 </body>
 </html>
