--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="./tasks/task-06.html">Task 06</a></li>
         <li><a href="./tasks/task-07.html">Task 07</a></li>
         <li><a href="./tasks/task-08.html">Task 08</a></li>
+        <li><a href="./tasks/task-09.html">Task 09</a></li>
     </ul>
 </body>
 </html>
