--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./tasks/task-07.html">Task 07</a></li>
         <li><a href="./tasks/task-08.html">Task 08</a></li>
         <li><a href="./tasks/task-09.html">Task 09</a></li>
+        <li><a href="./tasks/task-10.html">Task 10</a></li>
     </ul>
 </body>
 </html>
