--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="./tasks/task-08.html">Task 08</a></li>
         <li><a href="./tasks/task-09.html">Task 09</a></li>
         <li><a href="./tasks/task-10.html">Task 10</a></li>
+        <li><a href="./tasks/task-11.html">Task 11</a></li>
     </ul>
 </body>
 </html>
