--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="./tasks/task-09.html">Task 09</a></li>
         <li><a href="./tasks/task-10.html">Task 10</a></li>
         <li><a href="./tasks/task-11.html">Task 11</a></li>
+        <li><a href="./tasks/task-12.html">Task 12</a></li>
     </ul>
 </body>
 </html>
